# context-compressor

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: make_social_preview.py
benchmarks/: BENCHMARKS.md  benchmark.py
examples/: basic_compress.py  chat_history_compression.py  rag_integration.py  security_scan_compression.py
src/context_compressor/: __init__.py  cli.py  config.py  integrations.py
src/context_compressor/core/: __init__.py  compressor.py  metrics.py
src/context_compressor/filters/: __init__.py  detail_trim.py  noise_filter.py  pattern_remover.py  redundancy_filter.py
src/context_compressor/summarizers/: __init__.py  extractive.py  security_summarizer.py
src/context_compressor/utils/: __init__.py  token_counter.py
tests/: test_cli.py  test_compression.py  test_filters.py  test_integrations.py  test_security_summarizer.py
