[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-context-compressor"
version = "0.2.0"
description = "Shrink LLM context windows by removing noise, redundancy, and long-tail detail — without losing signal."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "uninhibited-scholar" }]
keywords = [
    "llm", "context", "compression", "tokens", "tiktoken",
    "prompt-engineering", "nlp", "summarization", "agents", "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Filters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # zero required dependencies

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "tiktoken>=0.5"]

[project.urls]
Homepage = "https://github.com/uninhibited-scholar/context-compressor"
Repository = "https://github.com/uninhibited-scholar/context-compressor"
Issues = "https://github.com/uninhibited-scholar/context-compressor/issues"

[project.scripts]
context-compress = "context_compressor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_compressor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
